2008-02-25  Kenichi Handa  <handa@ni.aist.go.jp>

	* xdisp.c (fill_glyph_string): Pay attention to glyph->padding_p.
	(append_glyph): Set glyph->pixel_width and glyph->padding_p to 1
	if the glyph in the font is zero pixel with.

	* dispextern.h (struct glyph_string): New member padding_p.

	* w32font.c (w32font_draw): Pay attention to s->padding_p.

	* ftxfont.c (ftxfont_draw): Pay attention to s->padding_p.

	* xfont.c (xfont_draw): Pay attention to s->padding_p.

	* xftfont.c (xftfont_draw): Pay attention to s->padding_p.

	* font.c: If the font driver doesn't have `shape' function, return
	Qnil.

2008-02-25  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (enum_font_cb2): Don't use raster fonts for Unicode.

2008-02-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/vms4-0.h:
	* s/vms4-2.h:
	* s/vms4-4.h:
	* s/vms5-5.h: Remove, unused.

	* s/irix5-2.h:
	* s/irix6-0.h:
	* s/riscos5.h:
	* s/mach-bsd4-3.h:
	* m/mips4.h: Remove files for obsolete systems

	* Makefile.in:
	* filelock.c:
	* unexmips.c:
	* m/hp9000s300.h:
	* m/iris4d.h:
	* s/aix3-1.h:
	* s/hpux.h:
	* s/msdos.h:
	* s/usg5-0.h:
	* s/usg5-2-2.h:
	* s/usg5-2.h:
	* s/usg5-3.h: Remove references to obsolete variables.

	* s/irix5-0.h: Remove, move all the contents ...
	* s/irix6-5.h: ... here.  Simplify.
	* config.in: Regenerate.

2008-02-24  Jason Rumney  <jasonr@gnu.org>

	* w32term.c: (x_draw_glyph_string_background): Clear the background
	manually when cleartype is in use.
	(x_draw_glyph_string_foreground): Draw text transparently when
	cleartype is in use.

	* w32font.c (w32font_text_extents): Avoid getting HDC and selecting
	a font into it unless we have to.

2008-02-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* intervals.h (INT_LISPLIKE): Remove.  It may misfire.
	(NULL_INTERVAL_P, SET_INTERVAL_PARENT): Don't use it.

2008-02-18  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Fw32_shell_execute): Encode parameters.

2008-02-09  Eli Zaretskii  <eliz@gnu.org>
